[package]
name = "db-config"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
description = "Define fields for vaults"
license = "MIT"
repository = ""
documentation = ""
readme = "README.md"
keywords = ["configuration", "database"]
categories = ["database"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
azure_vault_secrets = { path = "../azure-vault-secrets" }
