[package]
name = "db_config"
version = "0.1.1"
authors = ["Claus Guttesen <kometen@gmail.com>"]
description = "Define fields for vaults"
license = "MIT"
repository = "https://github.com/kometen/database-configuration"
documentation = "https://github.com/kometen/database-configuration"
readme = "README.md"
keywords = ["configuration", "database"]
categories = ["database"]
edition = "2021"

[dependencies]
azure_vault_secrets = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
